<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UseCompoundDrawables"
        style="@style/Toolbar">

        <ImageView
            android:id="@+id/back"
            style="@style/BackButton"
            android:contentDescription="@string/go_back" />
        
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/garbage_clean_title"
            android:textAppearance="@style/Text.Header_1"/>

    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <yin_kio.storage_info_view.StorageInfoView
                android:id="@+id/storage_info"
                app:title="@string/internal_storage"
                app:total_storage_title="@string/total_storage_space"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="24dp">

            </yin_kio.storage_info_view.StorageInfoView>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="24dp"
                android:layout_marginTop="24dp"
                android:gravity="bottom">

                <TextView
                    android:text="@string/garbage_files"
                    android:textAppearance="@style/Text.Header_3"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textColor="@color/green"/>

                <TextView
                    android:id="@+id/select_all_text"
                    android:layout_width="wrap_content"
                    android:text="@string/select_all"
                    android:gravity="bottom|end"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/Text.Subtitle_1.2"
                    android:paddingEnd="8dp"/>

                <CheckBox
                    android:id="@+id/select_all"
                    style="@style/CheckBox"/>

            </LinearLayout>

            <TextView
                android:id="@+id/can_free"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/can_free"
                android:layout_marginStart="16dp"
                android:textAppearance="@style/Text.Subtitle_1.2"
                android:textColor="@color/gray"/>


            <LinearLayout android:id="@+id/progress_plate"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:gravity="center"
                android:visibility="visible"
                android:elevation="8dp">

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    app:srcCompat="@drawable/ic_spinner"
                    android:layout_marginBottom="8dp"
                    android:contentDescription="@string/garbage_clean_title"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/device_scanning"
                    android:textAppearance="@style/Text.Subtitle_1.2"
                    android:textColor="@color/gray"/>

            </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.recyclerview.widget.RecyclerView android:id="@+id/recycler"
                    android:visibility="visible"
                    android:paddingHorizontal="24dp"
                    android:clipToPadding="false"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    tools:listitem="@layout/list_item_garbage"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    android:orientation="vertical"
                    tools:itemCount="5"/>

                <LinearLayout android:id="@+id/delete_has_been"
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="16dp"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:contentDescription="@string/your_phone_is_clean"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/delete_has_been"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/your_phone_is_clean"
                        android:gravity="center"
                        android:textAppearance="@style/Text.Body_1.2"
                        android:textColor="@color/gray"/>

                </LinearLayout>

            </FrameLayout>



        </LinearLayout>

    </androidx.core.widget.NestedScrollView>



    <TextView
        android:text="@string/delete"
        android:id="@+id/delete"
        style="@style/MainButton"/>

</LinearLayout>